--- a/learning_entropy.ipynb
+++ b/learning_entropy.ipynb
@@ -188,6 +188,40 @@
     "# Print the model summary\n",
     "print(results.summary())"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Entropy: 1.8464393446710154\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "def compute_entropy(data):\n",
+    "    # Count the occurrences of each unique value in the data\n",
+    "    unique_values, counts = np.unique(data, return_counts=True)\n",
+    "    \n",
+    "    # Compute the probabilities of each unique value\n",
+    "    probabilities = counts / len(data)\n",
+    "    \n",
+    "    # Compute the entropy\n",
+    "    entropy = -np.sum(probabilities * np.log2(probabilities))\n",
+    "    \n",
+    "    return entropy\n",
+    "\n",
+    "# Example usage\n",
+    "data = [1, 1, 2, 3, 3, 3, 4, 4, 4, 4]\n",
+    "entropy = compute_entropy(data)\n",
+    "print(\"Entropy:\", entropy)"
+   ]
   }
  ],
  "metadata": {
