--- a/learning_entropy.ipynb
+++ b/learning_entropy.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
     "# calculate information for event\n",
     "h = -log2(p)\n",
     "# print the result\n",
-    "print('p(x)=%.3f, information: %.3f bits' % (p, h))"
+    "print('p(x)=%.3f, information(s): %.3f bits' % (p, h))"
    ]
   },
   {
